# test_trajectory

./: .coding-ci.yml  .gitignore  0409_hard.config  Dockerfile  README.md  StandardObserver_问题分析.md  auto_deploy.sh  build.sh
autoaim_bring_up/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
autoaim_bring_up/descriptions/urdf/: gimbal_description.urdf.xacro
autoaim_bring_up/launch/: autoaim.launch.py  no_hardware.launch.py  test.launch.py
autoaim_gimbal_planner/: CMakeLists.txt
autoaim_gimbal_planner/include/autoaim_gimbal_planner/: GimbalPlannerNode.hpp
autoaim_gimbal_planner/src/: GimbalPlannerNode.cpp  gimbal_planner_node_parameters.yaml
camera_imu_bridge/: CMakeLists.txt  package.xml
camera_imu_bridge/config/: MV-SUF401GC  camera_imu_bridge_params.yaml  camera_info.yaml  camera_params.yaml
camera_imu_bridge/include/camera_imu_bridge/: Camera.hpp  CameraFrame.hpp  CameraImuBridgeNode.hpp  CameraParams.hpp  Imu.hpp  ImuFactory.hpp  ImuFrame.hpp  ImuFtd2xx.hpp  ImuSerial.hpp  LogLevel.hpp  RingArray.hpp  Syncer.hpp  SyncerParams.hpp
camera_imu_bridge/lib/MindVisionSDK/include/: CameraApi.h
camera_imu_bridge/lib/ftd2xx/include/: WinTypes.h
camera_imu_bridge/src/: Camera.cpp  CameraImuBridgeNode.cpp  ImuFactory.cpp  ImuFtd2xx.cpp  ImuSerial.cpp  Syncer.cpp
camera_imu_syncer/: 0409.config  build_and_run.sh
camera_imu_syncer/camera_imu_syncer_interfaces/: CMakeLists.txt  package.xml
camera_imu_syncer/camera_imu_syncer_interfaces/msg/: Camera.msg  CameraImuSync.msg  Imu.msg
camera_imu_syncer/camera_imu_syncer_node/: CMakeLists.txt  package.xml
camera_imu_syncer/camera_imu_syncer_node/include/camera_imu_syncer_node/: Camera.hpp  Imu.hpp  Syncer.hpp
camera_imu_syncer/camera_imu_syncer_node/lib/MVSDK/: CMakeLists.txt  MindVisionCamera.cpp  MindVisionCamera.h
camera_imu_syncer/camera_imu_syncer_node/lib/MVSDK/include/: CameraDefine.h
camera_imu_syncer/camera_imu_syncer_node/src/: Camera.cpp  Imu.cpp  Syncer.cpp  camera_imu_syncer.cpp
camera_recorder/: CMakeLists.txt
camera_recorder/src/: CameraRecorder.cpp  camera_recorder_params.yaml
gimbal_trajectory/: CMakeLists.txt  package.xml
gimbal_trajectory/include/gimbal_trajectory/: gimbal_trajectory_node.hpp
gimbal_trajectory/launch/: gimbal_trajectory.launch.py
gimbal_trajectory/src/: gimbal_trajectory_node.cpp  gimbal_trajectory_node_parameters.yaml
helios_autoaim/autoaim_armor_detector/: CMakeLists.txt  package.xml
helios_autoaim/autoaim_armor_detector/config/: armor_detector_parameters.yaml
helios_autoaim/autoaim_armor_detector/src/: ArmorDetectorFactory.cpp  ArmorDetectorNode.cpp  DetectStream.cpp  OVNetArmorEnergyDetector.cpp  PnPsolver.cpp  TraditionalArmorDetector.cpp
helios_autoaim/autoaim_debugger/: CMakeLists.txt  package.xml
helios_autoaim/autoaim_debugger/include/autoaim_debugger/: AutoAimDebugger.hpp  (+1 more)
helios_autoaim/autoaim_debugger/src/: AutoAimDebugger.cpp  autoaim_debugger_parameters.yaml
helios_autoaim/autoaim_detectors/autoaim_detectors/: package.xml
helios_autoaim/autoaim_detectors/detector_node/: CMakeLists.txt  package.xml
helios_autoaim/autoaim_detectors/detectors/: CMakeLists.txt  package.xml
helios_autoaim/autoaim_gimbal_planner/: CMakeLists.txt
helios_autoaim/autoaim_gimbal_planner/launch/: gimbal_planner.launch.py
helios_autoaim/autoaim_gimbal_planner/src/: GimbalPlannerNode.cpp  gimbal_planner_node_parameters.yaml
helios_autoaim/autoaim_gimbal_planner/tinympc/: CMakeLists.txt  codegen.cpp  types.hpp
helios_autoaim/autoaim_interfaces/: CMakeLists.txt
helios_autoaim/autoaim_interfaces/msg/: PlannedTarget.msg  ReceiveData.msg  Target.msg
helios_autoaim/autoaim_predictors/energy_predictor/: CMakeLists.txt
helios_autoaim/autoaim_predictors/energy_predictor/include/energy_predictor/: EnergyPredictorNode.hpp  Omega.hpp
helios_autoaim/autoaim_predictors/energy_predictor/src/: EnergyPredictorNode.cpp  LeastSquaresNode.cpp  energy_predictor_node_parameters.yaml
helios_autoaim/autoaim_priority/: CMakeLists.txt  package.xml
helios_autoaim/autoaim_priority/src/: AutoaimPriority.cpp
helios_autoaim/autoaim_utilities/src/: BulletTrajectory.cpp  KalmanFilter.cpp  Math.cpp  PnPsolver.cpp
serial/: README.md  package.xml
serial/include/serial/: CRC.h
serial/src/: Serial.cpp
src/autoaim_bring_up/: CMakeLists.txt
src/autoaim_bring_up/config/: launch_params.yaml  node_params.yaml
src/autoaim_bring_up/launch/: autoaim.launch.py  component.launch.py  no_hardware.launch.py  test.launch.py  trace.launch.py  video_debug.launch.py
src/autoaim_gimbal_planner/: package.xml
src/autoaim_gimbal_planner/src/: GimbalPlannerNode.cpp  gimbal_planner_node_parameters.yaml
src/autoaim_interfaces/: CMakeLists.txt
src/autoaim_interfaces/msg/: DebugEnergyVel.msg  Omega.msg  PreTrajectory.msg  SendData.msg  Target.msg
src/autoaim_predictors/armor_predictor/: package.xml
src/autoaim_utilities/: CMakeLists.txt
src/autoaim_utilities/src/: BulletTrajectory.cpp  Math.cpp
src/camera_recorder/: package.xml
src/ctrl_bridge/: CMakeLists.txt  README.md  package.xml
src/ctrl_bridge/launch/: ctrl_bridge.launch.py
src/ctrl_bridge/src/: CtrlBridge.cpp  ctrl_bridge_parameters.yaml
src/helios_autoaim/autoaim_detectors/detector_node/: CMakeLists.txt
src/helios_autoaim/autoaim_detectors/detector_node/include/detector_node/: DetectorFactory.hpp  DetectorNode.hpp
src/helios_autoaim/autoaim_detectors/detector_node/src/: DetectorFactory.cpp  DetectorNode.cpp  detector_node_parameters.yaml
src/helios_autoaim/autoaim_gimbal_planner/: package.xml
src/helios_autoaim/helios_autoaim/: package.xml
src/hipnuc_imu/config/: hipnuc_config.yaml
src/ros2_hik_camera/: CMakeLists.txt
src/ros2_hik_camera/config/: camera_params.yaml
src/ros2_hik_camera/src/: hik_camera_node.cpp
src/ros2_mindvision_camera/: package.xml
src/ros2_mindvision_camera/config/: 0409.config  camera_params.yaml
src/ros2_mindvision_camera/src/: MindVision.cpp
src/serial/: CMakeLists.txt
src/serial/include/serial/: Serial.hpp
src/serial/src/: CRC.cpp  Serial.cpp
(+83 files in other folders)
